# EWS-Financial-Networks

./: .gitignore  README.md  market_model.ipynb  model.ipynb  paper.ipynb  plot.ipynb  pyproject.toml  training_data.py  wilson_cowan_clean.ipynb
docs/: toy_model_spec.md
final-results/liquidity/: generate_training_data.py  liquid_model.py  model.ipynb
final-results/reproduce/: config.py  wc_model.py  wc_utils.py
goodwin/: a.py  feature_dataset.csv  network_spec.json  simulator.py
goodwin/simulation_runs/: metadata.csv  run_000.csv  run_001.csv  run_002.csv  run_003.csv  run_004.csv
liquidity/: TRAINING_DATA_README.md  a.py  analyze_contagion.py  generate_training_data.py  liquid_model.py  load_dataset.py  train_model.ipynb  validate_model.py
liquidity/training_data/: config.json  metadata.csv
please_work/: best_model_wc.pth  config.py  main.py  wc_dataset.py  wc_model.py  wc_simulation.py  wc_utils.py
tests/: conftest.py  test_liquidity.py  test_market_model.py  test_wilson_cowan.py
wilson_cowan/: config.py  main.py  wc_dataset.py  wc_model.py  wc_simulation.py  wc_utils.py  wilson_cowan_clean.ipynb
