[project]
name = "ews-financial-networks"
version = "0.1.0"
description = "Early-warning signals for critical transitions in financial networks: a GIN-GRU tipping-point predictor trained on simulated networked dynamical systems"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.4",
    "torch-geometric>=2.5",
    "numpy>=1.26",
    "scipy>=1.13",
    "networkx>=3.2",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 100
extend-exclude = ["final-results"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
